--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 itertools = "0.12.1"
 clap = {version = "4.4.18", features = ["derive"]}
+log = "0.4.20"
+env_logger = "0.11.2"
