--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ itertools = "0.12.1"
 clap = {version = "4.4.18", features = ["derive"]}
 log = "0.4.20"
 env_logger = "0.11.2"
+hashbrown = "0.14.3"
