--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ clap = {version = "4.4.18", features = ["derive"]}
 log = "0.4.20"
 env_logger = "0.11.2"
 hashbrown = "0.14.3"
+once_cell = "1.19.0"
+
+[profile.release]
+debug = true
